Solutions/Kubernetes-Resources/ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"argo-tunnel"},"name":"cashier","namespace":"cashier"},"spec":{"rules":[{"host":"checkout-mitch.bold.ninja","http":{"paths":[{"backend":{"serviceName":"webserver","servicePort":8080},"path":"/"}]}}],"tls":[{"hosts":["checkout-mitch.bold.ninja"],"secretName":"mydomain-tunnel-cert"}]}}
      kubernetes.io/ingress.class: argo-tunnel
    creationTimestamp: 2020-01-31T18:58:28Z
    generation: 1
    name: simple-node-app
    namespace: simple-node-app
    resourceVersion: "666"
    uid: ecfe9048-75b7-4cea-93b6-d82b12583898
  spec:
    rules:
    - host: checkout-mitch.bold.ninja
      http:
        paths:
        - backend:
            serviceName: simple-node-app
            servicePort: 3000
          path: /
    tls:
    - hosts:
      - checkout-mitch.bold.ninja
      secretName: mydomain-tunnel-cert
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
