Solutions/Kubernetes-Resources/mysql-service-separate-pod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: simple-node-app
spec:
  ports:
  - name: mysql
    port: 3306
    nodePort: 31307
  selector:
    name: mysql
  sessionAffinity: None
  type: NodePort
