Solutions/Kubernetes-Resources/simple-node-app-deployment-with-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    component: simple-node-app
    kubernetes.io/hostname: simple-node-app
  name: simple-node-app
  namespace: simple-node-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: simple-node-app
      component: simple-node-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-node-app
        component: simple-node-app
        name: simple-node-app
    spec:
      containers:
      - name: simple-node-app
        env:
        - name: CONFIG_PATH
          value: /var/lib/queue
        image: boldapps/simple-node-app:1.0.0
        imagePullPolicy: Never
        name: simple-node-app
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - name: mysql
        image: mysql/mysql-server:5.6
        command: ["mysql -uroot -proot < echo \"GRANT ALL ON *.* TO root@'%' IDENTIFIED BY 'root';\""]
        env:
        - name: MYSQL_ROOT_PASSWORD
          value: "root"
        - name: MYSQL_DATABASE
          value: "node-app-db"
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MYSQL_ROOT_HOST
          value: "%"
        ports:
        - containerPort: 3306
          name: mysql
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
