Solutions/Kubernetes-Resources/simple-node-app-deployment-with-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    component: simple-node-app
    kubernetes.io/hostname: simple-node-app
  name: simple-node-app
  namespace: simple-node-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: simple-node-app
      component: simple-node-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-node-app
        component: simple-node-app
        name: simple-node-app
    spec:
      containers:
      - env:
        - name: CONFIG_PATH
          value: /var/lib/queue
        image: boldapps/simple-node-app:1.0.0
        imagePullPolicy: Never
        name: simple-node-app
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # SIDECAR CONTAINER
      - name: tunnel
        image: boldapps/cloudflare-tunnel:1.0.0
        imagePullPolicy: Never
        command: ["cloudflared", "tunnel"]
        args:
          - --url=127.0.0.1:3000
          - --hostname=checkout-mitch.bold-ninja
          - --origincert=/etc/cloudflared/cert.pem
          - --no-autoupdate
        env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
        volumeMounts:
          - mountPath: /etc/cloudflared
            name: tunnel-secret
            readOnly: true
      #END OF SIDECAR CONTAINER
      volumes:
        - name: tunnel-secret
          secret:
            secretName: mydomain-tunnel-cert
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
