Solutions/Kubernetes-Resources/simple-node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    component: simple-node-app
    kubernetes.io/hostname: simple-node-app
  name: simple-node-app
  namespace: simple-node-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: simple-node-app
      component: simple-node-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-node-app
        component: simple-node-app
        name: simple-node-app
    spec:
      containers:
      - env:
        - name: CONFIG_PATH
          value: /var/lib/queue
        image: boldapps/simple-node-app:1.0.0
        imagePullPolicy: Never
        name: simple-node-app
        resources:
          limits:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
